# rs-mdbook-alerts

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: audit.yml  build.yml  bump_version.yml  release.yml  test.yml
assets/: alerts.tmpl  style.css
example/src/: chapter_1.md
src/: lib.rs  main.rs
src/snapshots/: mdbook_alerts__tests__render_alerts.snap  mdbook_alerts__tests__render_alerts_with_crlf-2.snap  mdbook_alerts__tests__render_alerts_with_crlf.snap
