[package]
name = "mdbook-alerts"
version = "0.5.2"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"

description = "mdBook preprocessor to add GitHub Flavored Markdown's Alerts to your book"
repository = "https://github.com/lambdalisue/rs-mdbook-alerts"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
mdbook = "0.4.40"
once_cell = "1.19.0"
regex = "1.10.5"
rust-embed = "8.4.0"
semver = "1.0.23"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
