[package]
name = "mdbook-alerts"
version = "0.0.0"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"

description = "mdBook preprocessor to add GitHub Flavored Markdown's Alerts to your book"
repository = "https://github.com/lambdalisue/rs-mdbook-alerts"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
mdbook = "0.4.40"
once_cell = "1.20.2"
regex = "1.11.0"
rust-embed = "8.5.0"
semver = "1.0.23"
serde = { version = "1.0.213", features = ["serde_derive"] }
serde_json = "1.0.132"
