[package]
name = "mdbook-alerts"
version = "0.0.0"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"

description = "mdBook preprocessor to add GitHub Flavored Markdown's Alerts to your book"
repository = "https://github.com/lambdalisue/rs-mdbook-alerts"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
mdbook = "0.4.51"
once_cell = "1.21.3"
regex = "1.11.1"
rust-embed = "8.7.2"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.1"
